deploy/base/service.yaml
# deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service # Name will be prefixed in kustomization.yaml
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
